--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Todistusvalintalaskuri - laskee pisteesi yli 800 hakukohteeseen</title>
+    <meta
+            name="description"
+            content="Sivusto laskee todistusvalinnan pisteesi sekä yliopistojen että ammattikorkeakoulujen hakukohteisiin ylioppilastutkinnon ja ammatillisen perustutkinnon perusteella."
+        />
+        <meta
+            name="keywords"
+            content="korkeakoulu, yliopisto, ammattikorkeakoulu, ei-ensikertalaisten, ensikertalaisten, pistelaskuri, yhteishaku, 2024, 2021, 2023, pisterajat, riittääkö pisteet, yhteishakulaskuri, riittääkö pisteet 2024, todistusvalinnan pisteytys, pitääkö korottaa ylioppilasarvosanoja, pääsenkö suoraan todistuksella sisään, riittävätkö pisteeni, ylioppilastutkinto, ammattikoulutodistus, ammatillinen, laskuri, yo-todistus"
+        />
+        <meta property="og:url" content="http://todistusvalinta.fi" />
+        <meta
+            property="og:description"
+            content="Todistusvalintalaskuri laskee todistusvalinnan pisteesi lähes kaikkiin korkeakoulujen hakukohteisiin. Sivusto sisältää sekä yliopistojen että ammattikorkeakoulujen pisterajat ja laskee pisteet ylioppilastutkinnon ja ammattikoulun todistuksen perusteella."
+        />
+        <meta property="og:title" content="Todistusvalintalaskuri" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="<%= public_kansio %>/otsikkokuva.png" />
+        <meta name="theme-color" content="#568172" />
   </head>
   <body>
     <div id="root"></div>
