--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:image" content="<%= public_kansio %>/otsikkokuva.png" />
         <meta name="theme-color" content="#568172" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="root"></div>
