--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      data-ad-client="ca-pub-6696837920628178"
+      async=""
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
   </body>
 </html>
