little changes to adsense

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <script
       data-ad-client="ca-pub-6696837920628178"
-      async=""
+      async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
   </body>
