--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).pauseAdRequests = 1;
+    </script>
   </body>
 </html>
