facebook domain verification

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/headerPicture.png" />
     <meta name="theme-color" content="#568172" />
+    <meta name="facebook-domain-verification" content="pwgtwmdey7yhi439vvigbktzkb084z" />
   </head>
   <body>
     <div id="root"></div>
