--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="korkeakoulu, yliopisto, ammattikorkeakoulu, ei-ensikertalaisten, ensikertalaisten, pistelaskuri, yhteishaku, 2024, 2021, 2023, pisterajat, riittääkö pisteet, yhteishakulaskuri, riittääkö pisteet 2024, todistusvalinnan pisteytys, pitääkö korottaa ylioppilasarvosanoja, pääsenkö suoraan todistuksella sisään, riittävätkö pisteeni, ylioppilastutkinto, ammattikoulutodistus, ammatillinen, laskuri, yo-todistus"
+      content="korkeakoulu, yliopisto, ammattikorkeakoulu, ei-ensikertalaisten, ensikertalaisten, pistelaskuri, yhteishaku, 2024, 2025, 2023, pisterajat, riittääkö pisteet, yhteishakulaskuri, riittääkö pisteet 2025, todistusvalinnan pisteytys, kevään yhteishaku, syksyn yhteishaku, riittävätkö pisteeni, ylioppilastutkinto, ammattikoulutodistus, ammatillinen, laskuri, yo-todistus"
     />
     <meta property="og:url" content="http://todistusvalinta.fi" />
     <meta
